edit swagger for logout
