# swagger.json
@@ -143,7 +143,8 @@
             "description": "The token issued to the current user."
           }
         ],
-        "security": { "Bearer": [] },
+        "security": [{ "Bearer": [] }],
+
         "requestBody": {
           "description": "Logout object",
           "required": true,
@@ -176,17 +177,7 @@
       "post": {
         "tags": ["Auth"],
         "summary": "User password reset",
-        "parameters": [
-          {
-            "in": "header",
-            "name": "Authorization",
-            "schema": {
-              "type": "string"
-            },
-            "required": true,
-            "description": "The token issued to the current user."
-          }
-        ],
+
         "security": { "Bearer": [] },
         "requestBody": {
           "description": "Reset password object",
@@ -287,7 +278,17 @@
       "get": {
         "tags": ["User"],
         "summary": "Get current user info",
-        "parameters": [],
+        "parameters": [
+          {
+            "in": "header",
+            "name": "Authorization",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "The token issued to the current user."
+          }
+        ],
         "security": [{ "Bearer": [] }],
         "responses": {
           "200": {
